force-app/main/default/objects/Portal_News__c/Portal_News__c.object-meta.xml
<CustomObject>
    <description>Used to post news and announcements to the Customer Community.</description>
    <label>Portal News</label>
    <nameField>
        <label>Portal News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>