force-app/main/default/objects/Portal_News__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this should be flagged as an Alert.</description>
    <inlineHelpText>Designates if this should be flagged as an Alert.</inlineHelpText>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>