force-app/main/default/objects/Portal_News__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <description>2576: Implement additional date fields for Support Portal announcements</description>
    <label>Created</label>
    <type>Date</type>
</CustomField>