force-app/main/default/objects/Portal_News__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date this posting should expire (if any).</description>
    <inlineHelpText>Date this posting should expire (if any).</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>