force-app/main/default/objects/Portal_News__c/fields/ForumType__c.field-meta.xml
<CustomField>
    <fullName>ForumType__c</fullName>
    <description>This Type is used to categorise notifications for forum announcements - CS21-709</description>
    <label>Forum Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Guidelines</fullName>
            </value>
            <value>
                <fullName>Forums FAQ</fullName>
            </value>
            <value>
                <fullName>Mailers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>