force-app/main/default/objects/Portal_News__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <description>2576: Implement additional date fields for Support Portal announcements</description>
    <label>Last Modified</label>
    <type>Date</type>
</CustomField>