force-app/main/default/objects/Portal_News__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <description>Date the posting will first be visible.</description>
    <inlineHelpText>Date the posting will first be visible.</inlineHelpText>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>