force-app/main/default/objects/Portal_News__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>