force-app/main/default/objects/Portal_News__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>New software and product releases</fullName>
            </value>
            <value>
                <fullName>Product defect alerts</fullName>
            </value>
            <value>
                <fullName>Product life cycle</fullName>
            </value>
            <value>
                <fullName>Security alerts</fullName>
            </value>
            <value>
                <fullName>Support announcements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>