force-app/main/default/objects/Portal_News__c/recordTypes/Announcements.recordType-meta.xml
<RecordType>
    <fullName>Announcements</fullName>
    <active>true</active>
    <description>Portal News Announcements</description>
    <label>Announcements</label>
</RecordType>