force-app/main/default/objects/Portal_News__c/recordTypes/Forums.recordType-meta.xml
<RecordType>
    <fullName>Forums</fullName>
    <active>true</active>
    <description>Forum News Announcements</description>
    <label>Forums</label>
</RecordType>