force-app/main/default/objects/Portal_News__c/listViews/Announcements.listView-meta.xml
<ListView>
    <fullName>Announcements</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Summary__c</columns>
    <columns>Publish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Portal_News__c.Announcements</value>
    </filters>
    <label>Announcements</label>
</ListView>