force-app/main/default/objects/Portal_News__c/listViews/Customer.listView-meta.xml
<ListView>
    <fullName>Customer</fullName>
    <columns>Audience__c</columns>
    <columns>Alert__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Publish_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Audience__c</field>
        <operation>equals</operation>
        <value>Customer,Edge Trial</value>
    </filters>
    <label>Customer</label>
</ListView>