force-app/main/default/objects/Portal_News__c/listViews/Forums.listView-meta.xml
<ListView>
    <fullName>Forums</fullName>
    <columns>NAME</columns>
    <columns>ForumType__c</columns>
    <columns>Summary__c</columns>
    <columns>Publish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Portal_News__c.Forums</value>
    </filters>
    <label>Forums</label>
</ListView>